[tool.poetry]
name = "kp-comments"
version = "0.1.0"
description = ""
authors = ["Travis Vasceannie <travis.vas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.8"
azure-functions = "^1.21.3"
openpyxl = "^3.1.5"
tk = "^0.1.0"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
